# slip_inference

./: README.md  deps.repos  package.xml  setup.cfg  setup.py
launch/: slip_inference.launch.py
models/: slipv1_2025-04-01_12-37-54.pt  slipv1_2025-04-01_15-10-50.pt
scripts/: script_file  slip_inference_gui.py
slip_inference/: inference_node.py
slip_inference/gui/: slip_inference_gui.py
touch_annotator/: bag_parser.py  fft_plotter.py  plotter.py  ros_to_numpy.py  safetensor_read.py  source_file.py
