<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>slip_inference</name>
  <version>0.0.0</version>
  <description>A package to annotate touch data</description>
  <maintainer email="vishal@touchlab.io">Your Name</maintainer>
  <license>Touchlab Limited</license>

  <!-- Add your dependancies here -->
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
